corrigindo bug do teclado no celular

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="quadro">
                 <canvas width="350" height="400"></canvas>
             </div>
-            
+
             <ul id="lista">
              
             </ul>
@@ -75,7 +75,7 @@
                 <h2>Letras Erradas:</h2>
             </div>    
         </section>
-
+        <input type="hidden" class="texto">
     </main>
     <footer>
         <p>&copy; Desenvolvido por Jonathan Oliveira</p>
