--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                 <h2>Letras Erradas:</h2>
             </div>    
         </section>
-        <input type="hidden" class="texto">
+        <section>
+            <input type="text" class="texto">
+        </section>        
     </main>
     <footer>
         <p>&copy; Desenvolvido por Jonathan Oliveira</p>
