--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
             </div>
             <div class="letrasErradas">
                 <h2>Letras Erradas:</h2>
-            </div>    
+            </div>  
+            <input type="text" class="texto" autofocus>  
         </section>
         <input type="text" class="texto">      
     </main>
