configurando teclado para mobile

--- a/index.html
+++ b/index.html
@@ -60,9 +60,41 @@
             <ul id="lista">
              
             </ul>
-            <div class="aviso invisivel" >
-                <p>Letra já utilizada, tente novamente!</p>
-            </div>
+            <div id="div-letras" class="div-letras">
+                <div class="tecladoL1">
+                    <button class="btn-letras" id="0" value="Q">Q</button>
+                    <button class="btn-letras" id="1" value="W">W</button>
+                    <button class="btn-letras" id="2" value="E">E</button>
+                    <button class="btn-letras" id="3" value="R">R</button>
+                    <button class="btn-letras" id="4" value="T">T</button>
+                    <button class="btn-letras" id="5" value="Y">Y</button>
+                    <button class="btn-letras" id="6" value="U">U</button>
+                    <button class="btn-letras" id="7" value="I">I</button>
+                    <button class="btn-letras" id="8" value="O">O</button>
+                    <button class="btn-letras" id="9" value="P">P</button>
+                </div>
+                <div class="tecladoL2">
+                    <button class="btn-letras" id="10" value="A">A</button>
+                    <button class="btn-letras" id="11" value="S">S</button>
+                    <button class="btn-letras" id="12" value="D">D</button>
+                    <button class="btn-letras" id="13" value="F">F</button>
+                    <button class="btn-letras" id="14" value="G">G</button>
+                    <button class="btn-letras" id="15" value="H">H</button>
+                    <button class="btn-letras" id="16" value="J">J</button>
+                    <button class="btn-letras" id="17" value="K">K</button>
+                    <button class="btn-letras" id="18" value="L">L</button>
+                </div>     
+                <div class="tecladoL3">
+                    <button class="btn-letras" id="19" value="Z">Z</button>
+                    <button class="btn-letras" id="20" value="X">X</button>
+                    <button class="btn-letras" id="21" value="C">C</button>
+                    <button class="btn-letras" id="22" value="V">V</button>
+                    <button class="btn-letras" id="23" value="B">B</button>
+                    <button class="btn-letras" id="24" value="N">N</button>
+                    <button class="btn-letras" id="25" value="M">M</button>
+                    <button class="btn-letras" id="26" value="Z">Z</button>
+                </div>
+              </div>
             <div class="botoes-adicionar">
                 <button id="novoJogo">
                     Novo jogo
@@ -74,7 +106,6 @@
             <div class="letrasErradas">
                 <h2>Letras Erradas:</h2>
             </div>  
-            <input type="text" class="texto" autofocus>  
         </section>  
     </main>
     <footer>
