--- a/index.html
+++ b/index.html
@@ -97,17 +97,23 @@
               </div>
               <div class="letrasErradas">
                 <h2>Letras Erradas:</h2>
-            </div>
-            <div class="botoes-adicionar">
-                <button id="novoJogo">
-                    Novo jogo
-                </button>
-                <button id="desistir">
-                    Desistir
-                </button>
-            </div>
-  
+            </div> 
         </section>
+        <div class="popup-wrapper invisivel">
+            <div class="popup">
+                <div class="popup-containner">
+                    <h2 id="mensagemFim">Parabens</h2>
+                    <div class="botoes-adicionar">
+                        <button id="novoJogo">
+                            Novo jogo
+                        </button>
+                        <button id="desistir">
+                            Desistir
+                        </button>
+                    </div>  
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <p>&copy; Desenvolvido por Jonathan Oliveira</p>
